# SINQ4LogicsParsing

./: CLAUDE.md  QUANTIZATION_GUIDE.md  README.md  STATUS.md  pyproject.toml  quantize_cli.py  requirements.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
design/: 01.md
scripts/: quantize_auto_group.py  quantize_cpu_only.py  quantize_logics_parsing.py  quantize_memory_optimized.py  quantize_model.py  quantize_model_low_memory.py  quantize_qwen_vl.py  quantize_qwen_vl_fixed.py  quantize_qwen_vl_no_tiling.py  quantize_simple.py  quantize_simple_8bit.py  quantize_simple_v2.py  test_sinq_simple.py  test_sinq_small.py  test_sinq_working.py
specs/001-github-huawei-csl/: plan.md  spec.md  tasks.md
src/: __init__.py
src/cli/: quantize_cli.py
src/services/: model_loader.py  pipeline.py  quantizer.py  validator.py
tests/contract/: test_model_loading.py  test_quantization.py
tests/integration/: test_model_loading.py  test_quantization_pipeline.py  test_validation.py
