[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinq4logicsparsing"
version = "0.1.0"
description = "SINQ quantization for Logics-Parsing model"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.55.0", 
    "modelscope>=1.9.0",
    "huggingface-hub>=0.34.4",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "einops>=0.8.1",
    "datasets>=2.0.0",
    "scipy>=1.13.1",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "lm_eval>=0.4.8",
    "accelerate>=0.30.0",
    "tqdm>=4.66.0",
    "qwen2.5-vl>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true